# opencreavor

./: .gitignore  Cargo.toml  LICENSE  README.md  install  test-creavor.sh
apps/broker/: Cargo.toml
apps/broker/config/: config.example.toml  settings.example.json
apps/broker/rules/: enterprise.yaml  pii.yaml  secrets.yaml
apps/broker/src/: audit.rs  config.rs  events.rs  interceptor.rs  lib.rs  main.rs  path_rewrite.rs  proxy.rs  router.rs  rule_engine.rs  storage.rs
apps/broker/tests/: blocking.rs  events_auth.rs  https_proxy.rs  p0_blocking.rs  p0_events_auth.rs  p0_streaming.rs  streaming.rs
apps/creavor-cli/: Cargo.toml
apps/creavor-cli/src/: broker.rs  cleanup.rs  cli.rs  doctor.rs  main.rs  session.rs  settings.rs
apps/creavor-cli/src/runtimes/: claude.rs  cline.rs  codex.rs  gemini.rs  mod.rs  openclaw.rs  opencode.rs  qwen.rs
apps/guard/: Cargo.toml
apps/guard/src/: approval.rs  lib.rs  main.rs  mcp.rs  risk.rs
docs/: broker代理功能技术方案-v1.3.2.md
docs/superpowers/plans/: 2026-04-06-broker-p0-implementation.md  2026-04-08-prd-v2-implementation.md
docs/superpowers/specs/: 2026-04-06-broker-audit-intercept-design.md
libs/creavor-core/: Cargo.toml
libs/creavor-core/src/: lib.rs  redaction.rs  runtime.rs  settings.rs  upstream.rs
runtimes/claude-code/: README.md
runtimes/cline/: README.md
runtimes/codex/: README.md
runtimes/gemini/: README.md
runtimes/openclaw/: README.md
runtimes/opencode/: README.md
