[package]
name = "creavor-broker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "broker-server"
path = "src/main.rs"

[dependencies]
anyhow = "1"
creavor-core = { path = "../../libs/creavor-core" }
axum = "0.8"
futures-core = "0.3"
futures-util = "0.3"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
hyper-tls = "0.6"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "test-util"] }
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
