[package]
name = "creavor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "creavor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros"] }
