[package]
name = "creavor-guard"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "creavor-guard"
path = "src/main.rs"

[dependencies]
anyhow = "1"
creavor-core = { path = "../../libs/creavor-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
